--- a/pages/100.html
+++ b/pages/100.html
@@ -9,6 +9,63 @@
 <title>float Layout</title>
 <link rel ="stylesheet" href ="font-awesome/css/font-awesome.min.css"/>
 <link rel ="stylesheet" href ="css/main.css">
+<style>
+    div{
+        color:aqua;
+        text-align: center;
+    }
+
+    span{
+    color :red;
+    }
+
+    body{
+            background-color:white;
+    }
+
+    input{
+        width:10%;
+        padding: 12px;
+        margin: 8px;
+        border: none;
+        border-top: 3px solid blue;
+        border-bottom: 3px solid red;
+        background-color: green;
+        color: black;
+        text-align: center;
+
+    }
+
+    h1{
+        color:blueviolet;
+        text-align: center;
+    }
+h2{
+    color:red;
+    text-align: center;
+}
+
+label{
+    color:aqua;
+    text-align: center;
+}
+
+p{
+    color:brown;
+    text-align: center;
+}
+
+footer{
+    color:red;
+    text-align: center;
+}
+
+h3{
+    color:aquamarine;
+    text-align: center;
+}
+</style>
+</style>
 
     
 </head>
@@ -44,7 +101,7 @@
 <summary>read more</summary> 
 <H3>ADVISE AND COUNSEL ON NUTRITION AND SELF-CARE AND SUBSTANCE ABUSE</H3><br/>
 Use the information and counselling sheet to support your interaction with the woman, her partner and family.<br/>
-
+<div>
 Counsel on nutrition<br/>
 Advise the woman to eat a greater amount and variety of healthy foods, such as meat, fish, oils, nuts, seeds, cereals, beans, vegetables, cheese, milk, to help her feel well and strong (give examples of types of food and how much to eat).<br/>
 Spend more time on nutrition counselling with very thin, adolescent and HIV-infected woman.<br/>
@@ -95,14 +152,15 @@ Counsel on alcohol use:<br/>
 
 Avoid alcohol during pregnancy.<br/>
 Counsel on drug use:<br/>
+</div>
 
 Avoid use of drugs during pregnancy.<br/>
 <label for ="Is the information useful">Is the information useful:</label>
 <input id ="Is the information useful" name ="Is the information useful" type ="text"/>   
 </details>
 <footer>
-    <a href="40.html">Previous page</a><br/>
-        <a href="101.html">Next page</a><br/>
+        <button type="submit"><a href="40.html">Previous page</a></button><br/>
+        <button type="submit"><a href="101.html">Next page</a></button><br/>
         Copyright@GRIMARD CATHOLIC HOSPITAL ANYIGBA
     
 </footer>
