--- a/pages/101.html
+++ b/pages/101.html
@@ -10,6 +10,40 @@
 <title>float Layout</title>
 <link rel ="stylesheet" href ="font-awesome/css/font-awesome.min.css"/>
 <link rel ="stylesheet" href ="css/main.css">
+<style>
+    input{
+        width:10%;
+        padding: 12px;
+        margin: 8px;
+        border: none;
+        border-top: 3px solid blue;
+        border-bottom: 3px solid red;
+        background-color: green;
+        color: black;
+        text-align: center;
+
+    }
+
+    h1{
+        color:blueviolet;
+        text-align: center;
+    }
+
+    label{
+    color:aqua;
+    text-align: center;
+}
+
+p{
+    color:brown;
+    text-align: center;
+}
+
+footer{
+    color:red;
+    text-align: center;
+}
+</style>
 
     
 </head>
@@ -27,8 +61,11 @@
     <label for ="Referral level pregnant women form">Referral level pregnant women form</label><br/>
     <input type ="radio" name ="Primary health care level form" value ="Primary health care level form" id ="Primary health care level form">
     <label for ="Primary health care level form">Primary health care level form</label><br/>
-    <p><a href="https://school.mildredgroup.com/contentlogin.php">SUBMIT</a><br/></p>
+    
 
 </body>
+<footer>
+    <button type="submit"><a href="https://school.mildredgroup.com/contentlogin.php">SUBMIT</a></button><br/>
+</footer>
 </html>
 
