--- a/pages/103.html
+++ b/pages/103.html
@@ -9,6 +9,23 @@
 <title>float Layout</title>
 <link rel ="stylesheet" href ="font-awesome/css/font-awesome.min.css"/>
 <link rel ="stylesheet" href ="css/main.css">
+<style>
+    h1{
+        color:blue;
+        text-align: center;
+    }
+
+    b{
+        color:red;
+        text-align: center;
+    }
+
+    p{
+
+        color:aquamarine;
+        text-align: center;
+    }
+</style>
 
     
 </head>
