--- a/pages/50.html
+++ b/pages/50.html
@@ -10,12 +10,59 @@
 <link rel ="stylesheet" href ="font-awesome/css/font-awesome.min.css"/>
 <link rel ="stylesheet" href ="css/main.css">
 
-    
+    <style>
+ body{
+            background-color:white;
+    }
+
+    input{
+        width:10%;
+        padding: 12px;
+        margin: 8px;
+        border: none;
+        border-top: 3px solid blue;
+        border-bottom: 3px solid red;
+        background-color: green;
+        color: black;
+        text-align: center;
+
+    }
+
+    h1{
+        color:blueviolet;
+        text-align: center;
+    }
+
+label{
+    color:aqua;
+    text-align: center;
+}
+
+p{
+    color:brown;
+    text-align: center;
+}
+
+footer{
+    color:red;
+    text-align: center;
+}
+div{
+    text-align: center;
+}
+circle{
+    text-align: center;
+}
+
+
+
+</style>
 </head>
 <body>
 <h1>Start learning with us</h1>
 <p>Create your account</p>
 <form>
+    <div>
     <label for ="firstname">Firstname:</label><br/>
     <input id ="firstname" name ="firstname" type ="text"/><br/>
     <label for ="middlename">middlename:</label><br/>
@@ -34,32 +81,32 @@
     <input type ="date" id ="dob" name ="dob"><br/>
     <label><p>Sex</p></label><br/>
     <input type ="radio" name ="sex" value ="female" id ="Female">
-    <label for ="Female">Female</label><br/>
+    <label for ="Female">Female</label>
     <input type ="radio" name ="sex" value ="Male" id ="Male">
-    <label for ="Male">Male</label><br/>
+    <label for ="Male">Male</label>
     <input type ="radio" name ="sex" value ="intersex" id ="intersex">
     <label for ="intersex">intersex</label><br/>
     <label><p>Gender Identity</p></label><br/>
     <input type ="radio" name ="gender identity" value ="cisgender" id ="cisgender">
-    <label for ="cisgender">Cisgender</label><br/>
+    <label for ="cisgender">Cisgender</label>
     <input type ="radio" name ="gender identity" value ="Gender Expression" id ="Gender Expression">
-    <label for ="Gender Expression">Gender Expression</label><br/>
+    <label for ="Gender Expression">Gender Expression</label>
     <input type ="radio" name ="gender identity" value ="Gender Fluid" id ="Gender fluid">
-    <label for ="Gender fluid">Gender Fluid</label><br/>
+    <label for ="Gender fluid">Gender Fluid</label>
     <input type ="radio" name ="gender identity" value ="Genderqueer" id ="Genderqueer">
-    <label for ="Genderqueer">Genderqueer</label><br/>
+    <label for ="Genderqueer">Genderqueer</label>
     <input type ="radio" name ="gender identity" value ="Gender Variant" id ="Gender Variant">
-    <label for ="Gender variant">Gender Variant</label><br/>
+    <label for ="Gender variant">Gender Variant</label>
     <input type ="radio" name ="gender identity" value ="Mx" id ="Mx">
     <label for ="Mx">Mx</label><br/>
     <label><p>Pronouns (optional)</p></label><br/>
     <input type ="radio" name ="pronouns (optional)" value ="She/Her/hers" id ="She/Her/hers">
-    <label for ="She/Her/Hers">She/Her/hers</label><br/>
+    <label for ="She/Her/Hers">She/Her/hers</label>
     <input type ="radio" name ="pronouns (optional)" value ="HE/Him/His" id ="HE/Him/His">
-    <label for ="HE/Him/His">HE/Him/His</label><br/>
+    <label for ="HE/Him/His">HE/Him/His</label>
     <input type ="radio" name ="pronounns (optional)" value ="They/Them/Theirs" id ="They/Them/Theirs">
-    <label for ="They/Them/Theirs">They/Them/Theirs</label><br/>
-    <div class="form-group"><br/>
+    <label for ="They/Them/Theirs">They/Them/Theirs</label>
+    <div class="form-group">
     <input type="Submit" value="Create Account">
     
 </div>
