--- a/pages/90.html
+++ b/pages/90.html
@@ -9,6 +9,58 @@
 <title>float Layout</title>
 <link rel ="stylesheet" href ="font-awesome/css/font-awesome.min.css"/>
 <link rel ="stylesheet" href ="css/main.css">
+<style>
+    span{
+    color :red;
+    }
+
+    body{
+            background-color:white;
+    }
+
+    input{
+        width:10%;
+        padding: 12px;
+        margin: 8px;
+        border: none;
+        border-top: 3px solid blue;
+        border-bottom: 3px solid red;
+        background-color: green;
+        color: black;
+        text-align: center;
+
+    }
+
+    h1{
+        color:blueviolet;
+        text-align: center;
+    }
+h2{
+    color:red;
+    text-align: center;
+}
+
+label{
+    color:aqua;
+    text-align: center;
+}
+
+p{
+    color:brown;
+    text-align: center;
+}
+
+footer{
+    color:red;
+    text-align: center;
+}
+
+h3{
+    color:aquamarine;
+    text-align: center;
+}
+</style>
+</style>
 
     
 </head>
@@ -59,9 +111,9 @@
     <input id ="Check record for pervious complication" name ="Check record for pervious complication" type ="text"/><br/>  
 </details>
 <footer>
-    <a href="40.html">Previous page</a><br/>
-    <a href="101.html">Next page</a><br/>
-    Copyright@GRIMARD CATHOLIC HOSPITAL ANYIGBA   
+    <button type="submit"><a href="40.html">Previous page</a></button><br/>
+        <button type="submit"><a href="101.html">Next page</a></button><br/>
+        Copyright@GRIMARD CATHOLIC HOSPITAL ANYIGBA  
 </footer>
 </body>
 </html>
