--- a/pages/60.html
+++ b/pages/60.html
@@ -9,6 +9,59 @@
 <title>float Layout</title>
 <link rel ="stylesheet" href ="font-awesome/css/font-awesome.min.css"/>
 <link rel ="stylesheet" href ="css/main.css">
+<style>
+span{
+    color :red;
+    }
+
+    body{
+            background-color:white;
+    }
+
+    input{
+        width:10%;
+        padding: 12px;
+        margin: 8px;
+        border: none;
+        border-top: 3px solid blue;
+        border-bottom: 3px solid red;
+        background-color: green;
+        color: black;
+        text-align: center;
+
+    }
+
+    h1{
+        color:blueviolet;
+        text-align: center;
+    }
+h2{
+    color:red;
+    text-align: center;
+}
+
+label{
+    color:aqua;
+    text-align: center;
+}
+
+p{
+    color:brown;
+    text-align: center;
+}
+
+footer{
+    color:red;
+    text-align: center;
+}
+
+h3{
+    color:aquamarine;
+    text-align: center;
+}
+</style>
+
+</style>
 
     
 </head>
@@ -76,15 +129,15 @@
     <input type ="radio" name ="THIRD TRIMESTER" value ="planning? if yes, does she want" id ="planning? if yes, does she want">
     <label for ="planning? if yes, does she want">planning? if yes, does she want</label><br/>
     <input type ="radio" name ="THIRD TRIMESTER" value ="tubal ligation or IUD A15" id ="tubal ligation or IUD A15">
-    <label for ="tubal ligation or IUD A15"></label>tubal ligation or IUD A15<br/>
+    <label for ="tubal ligation or IUD A15">tubal ligation or IUD A15</label><br/>
     <input type ="radio" name ="THIRD TRIMESTER" value ="Feel for transvere lie" id ="Feel for transvere lie">
     <label for ="Feel for transvere lie">Feel for transvere lie</label><br/>
     <input type ="radio" name ="THIRD TRIMESTER" value ="Listen to fetal heart" id ="Listen to fetal heart">
     <label for ="Listen to fetal heart">Listen to fetal heart</label><br/>
     </details>
     <footer>
-        <a href="40.html">Previous page</a><br/>
-        <a href="101.html">Next page</a><br/>
+        <button type="submit"><a href="40.html">Previous page</a></button><br/>
+        <button type="submit"><a href="101.html">Next page</a></button><br/>
         Copyright@GRIMARD CATHOLIC HOSPITAL ANYIGBA
     </footer>
     </body>
