--- a/pages/102.html
+++ b/pages/102.html
@@ -64,6 +64,9 @@ div{
     color:aqua;
     text-align: center;
 }
+a{
+	text-decoration: none;
+}
 </style>
 
 
@@ -241,7 +244,7 @@ div{
    </body>
    <footer>
     <button type="submit"><a href="103.html">Accept page</a></button><br/>
-    <input type="reset" value="RESET"><br/>
+    
 </footer>
 </html>
 
