--- a/pages/103.html
+++ b/pages/103.html
@@ -25,6 +25,15 @@
         color:aquamarine;
         text-align: center;
     }
+      
+footer{
+    text-align:center;
+}
+
+a{
+	text-decoration: none;
+}
+
 </style>
 
     
@@ -33,5 +42,8 @@
 <h1>ACCEPTANCE PAGE</h1>
 <P><B>CONGRATULATIONS</B> COMING TO PAGE MEANS THAT INFORMATION IS USEFUL <B>CONGRATULATIONS ONCE MORE</B></P>    
 </body>
+<footer>
+<button type="submit"><a href="102.html">previous page</a></button><br/>
+</footer>
 </html>
 
