--- a/pages/30.html
+++ b/pages/30.html
@@ -33,7 +33,10 @@ footer{
 		text-align: center;
 		color: #f44336;  
 }
-
+    a {
+text-decoration: none;
+tex
+}
 
 </style>
 
@@ -42,16 +45,18 @@ footer{
 <body>
 <h1>Forgot Password?</h1>
 <P>Please enter your email address. You will receive a link to create a new password via email.!</P>
+<form action="">
 <div class="form-group">
-    <input type="username" value="Email Address"
+    <input type="username" value="Email Address">
 </div>
 <div class="form-group">
-    <input type="Submit" value="Send Link">
+    <button type="submit"><a href="https://school.mildredgroup.com/contentlogin.php">Send link</a></button><br/>
     
 </div>
+</form>
+
 <footer>
-    <a href="40.html">Previous page</a><br/>
-    <a href="101.html">Next page</a><br/>
+    <button type="submit"><a href="login.html">Back</a></button><br/>
     Copyright@GRIMARD CATHOLIC HOSPITAL ANYIGBA   
 </footer>
     
