--- a/pages/60.html
+++ b/pages/60.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script>
+    
+</script>    
 <meta charset="utf-8">
 <meta name ="keywords" content ="HTML 5, CSS 3, JavaScript, jquery, Angularjs"/>
 <meta name ="description" content ="Dynamic web development">
